force-app/main/default/objects/CredentialForm__c/CredentialForm__c.object-meta.xml
<CustomObject>
    <label>Credential Form</label>
    <nameField>
        <label>Credential Form</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credential Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>