force-app/main/default/objects/CredentialForm__c/fields/Accessibility_needs__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_needs__c</fullName>
    <description>Do you have any accessibility needs?</description>
    <label>Accessibility needs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>