force-app/main/default/objects/CredentialForm__c/fields/Advisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Name__c</fullName>
    <description>Advisor Name</description>
    <label>Advisor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>