force-app/main/default/objects/CredentialForm__c/fields/AdvisorEndorserInstructor_agreement__c.field-meta.xml
<CustomField>
    <fullName>AdvisorEndorserInstructor_agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I understand that advisors, endorsers, and instructors are selected based on the requirements above, recommendations, and capacity.</description>
    <label>Advisor/Endorser/Instructor agreement</label>
    <type>Checkbox</type>
</CustomField>