force-app/main/default/objects/CredentialForm__c/fields/Advisors_Email__c.field-meta.xml
<CustomField>
    <fullName>Advisors_Email__c</fullName>
    <description>Advisor&apos;s Email</description>
    <label>Advisor&apos;s Email</label>
    <type>Email</type>
</CustomField>