force-app/main/default/objects/CredentialForm__c/fields/Advisors_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Advisors_First_Name__c</fullName>
    <description>Advisor&apos;s First Name</description>
    <label>Advisor&apos;s First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>