force-app/main/default/objects/CredentialForm__c/fields/Availability_to_meet_with_your_mentor__c.field-meta.xml
<CustomField>
    <fullName>Availability_to_meet_with_your_mentor__c</fullName>
    <description>Please list your availability to meet with your mentor (days/time)</description>
    <label>Availability to meet with your mentor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>