force-app/main/default/objects/CredentialForm__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <description>Candidate Name</description>
    <label>Candidate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>