force-app/main/default/objects/CredentialForm__c/fields/Candidates_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Candidates_Email_Address__c</fullName>
    <description>Candidate&apos;s Email Address</description>
    <label>Candidate&apos;s Email Address</label>
    <type>Email</type>
</CustomField>