force-app/main/default/objects/CredentialForm__c/fields/Credential_Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Credential_Form_Type__c</fullName>
    <label>Credential Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Virtual SAC</fullName>
            </value>
            <value>
                <fullName>DL SAC</fullName>
            </value>
            <value>
                <fullName>Duplicate SAC Certificate</fullName>
            </value>
            <value>
                <fullName>New Advisor Mentor Application</fullName>
            </value>
            <value>
                <fullName>Advisor Training</fullName>
            </value>
            <value>
                <fullName>SAC Renewal</fullName>
            </value>
            <value>
                <fullName>SAC Renewal Assistance</fullName>
            </value>
            <value>
                <fullName>SAC Endorsement Request</fullName>
            </value>
            <value>
                <fullName>SAC Endorser Uploads</fullName>
            </value>
            <value>
                <fullName>SAC Credential Advisor/Endorser/Instructor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>