force-app/main/default/objects/CredentialForm__c/fields/Days_will_not_be_in_program_to_record__c.field-meta.xml
<CustomField>
    <fullName>Days_will_not_be_in_program_to_record__c</fullName>
    <description>List ANY days you will not be in your program to record over the next three months (include ALL holidays, days off, or other days that would not be a &quot;typical&quot; day)</description>
    <label>Days will not be in program to record:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>