force-app/main/default/objects/CredentialForm__c/fields/Direct_CareAdv_Professional_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Direct_CareAdv_Professional_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Direct Care Or Advanced Professional Renewal</description>
    <label>Direct Care/Adv Professional Renewal</label>
    <type>Checkbox</type>
</CustomField>