force-app/main/default/objects/CredentialForm__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <description>Education</description>
    <label>Education</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>