force-app/main/default/objects/CredentialForm__c/fields/Email_of_instructorHost_Agency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Email_of_instructorHost_Agency_Contact__c</fullName>
    <description>Email of instructor/Host Agency Contact</description>
    <label>Email of instructor/Host Agency Contact</label>
    <type>Email</type>
</CustomField>