force-app/main/default/objects/CredentialForm__c/fields/Email_where_cert_sent__c.field-meta.xml
<CustomField>
    <fullName>Email_where_cert_sent__c</fullName>
    <description>Email (where your certificate will be sent)</description>
    <label>Email (where cert sent)</label>
    <type>Email</type>
</CustomField>