force-app/main/default/objects/CredentialForm__c/fields/Experience_as_responsible_for_growth__c.field-meta.xml
<CustomField>
    <fullName>Experience_as_responsible_for_growth__c</fullName>
    <description>Please describe, including time frames, your experience as someone responsible for the growth of another adult. (Must have one year.)</description>
    <label>Experience as responsible for growth</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>