force-app/main/default/objects/CredentialForm__c/fields/Experience_coaching_other_adults__c.field-meta.xml
<CustomField>
    <fullName>Experience_coaching_other_adults__c</fullName>
    <description>Please describe, including the time frames, your experience coaching other adults</description>
    <label>Experience coaching other adults:</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>