force-app/main/default/objects/CredentialForm__c/fields/Experience_w_NYS_OCFS_SAC_regulations__c.field-meta.xml
<CustomField>
    <fullName>Experience_w_NYS_OCFS_SAC_regulations__c</fullName>
    <description>Please describe your knowledge of and experience with NYS OCFS SAC regulations</description>
    <label>Experience w/ NYS OCFS SAC regulations</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>