force-app/main/default/objects/CredentialForm__c/fields/Folder_Gmail_address__c.field-meta.xml
<CustomField>
    <fullName>Folder_Gmail_address__c</fullName>
    <description>Gmail Address we can use to set up your folder (Note: Work gmails don&apos;t always work)</description>
    <label>Folder Gmail address:</label>
    <type>Email</type>
</CustomField>