force-app/main/default/objects/CredentialForm__c/fields/Home_Address__c.field-meta.xml
<CustomField>
    <fullName>Home_Address__c</fullName>
    <description>Home Address</description>
    <label>Home Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>