force-app/main/default/objects/CredentialForm__c/fields/Host_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Host_Agency_Name__c</fullName>
    <description>Host Agency Name (where you took the course)</description>
    <label>Host Agency Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>