force-app/main/default/objects/CredentialForm__c/fields/I_paid_via_Credit_cardVoucherCheck__c.field-meta.xml
<CustomField>
    <fullName>I_paid_via_Credit_cardVoucherCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I paid via (credit card, EIP Voucher, Check)</description>
    <label>I paid via Credit card/Voucher/Check</label>
    <type>Checkbox</type>
</CustomField>