force-app/main/default/objects/CredentialForm__c/fields/Knowledge_of_SACNYS_Standards__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_of_SACNYS_Standards__c</fullName>
    <description>Please describe your knowledge and understanding of the SAC Credential Standards and/or Network for Youth Success Accreditation standards</description>
    <label>Knowledge of SAC/NYS Standards</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>