force-app/main/default/objects/CredentialForm__c/fields/Language_of_Portfolio_and_Resource_File__c.field-meta.xml
<CustomField>
    <fullName>Language_of_Portfolio_and_Resource_File__c</fullName>
    <description>Language my Portfolio and Resource File are written in</description>
    <label>Language of Portfolio and Resource File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>