force-app/main/default/objects/CredentialForm__c/fields/Languages_spoken_by_children_in_program__c.field-meta.xml
<CustomField>
    <fullName>Languages_spoken_by_children_in_program__c</fullName>
    <description>Languages spoken by the children in program:</description>
    <label>Languages spoken by children in program:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>