force-app/main/default/objects/CredentialForm__c/fields/Membership_renewal_date__c.field-meta.xml
<CustomField>
    <fullName>Membership_renewal_date__c</fullName>
    <description>Membership renewal date</description>
    <label>Membership renewal date</label>
    <type>Date</type>
</CustomField>