force-app/main/default/objects/CredentialForm__c/fields/Mentee_Advisor_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Mentee_Advisor_Agreement__c</fullName>
    <description>Mentee Advisor Agreement</description>
    <label>Mentee Advisor Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>