force-app/main/default/objects/CredentialForm__c/fields/NamesContact_info_of_references__c.field-meta.xml
<CustomField>
    <fullName>NamesContact_info_of_references__c</fullName>
    <description>Please provide the names and contact information (phone number and email address) of at least two individuals that can attest to your competence in the school-age child care field.</description>
    <label>Names/Contact info of references</label>
    <length>255</length>
    <type>Text</type>
</CustomField>