force-app/main/default/objects/CredentialForm__c/fields/NotesComments__c.field-meta.xml
<CustomField>
    <fullName>NotesComments__c</fullName>
    <description>Notes/Comments</description>
    <label>Notes/Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>