force-app/main/default/objects/CredentialForm__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <description>Organization</description>
    <label>Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>