force-app/main/default/objects/CredentialForm__c/fields/Plan_for_your_primary_advisement_work__c.field-meta.xml
<CustomField>
    <fullName>Plan_for_your_primary_advisement_work__c</fullName>
    <description>If you are applying to be an advisor, who do you plan to do your primary advisement work for?</description>
    <label>Plan for your primary advisement work?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Specific Organization</fullName>
            </value>
            <value>
                <fullName>Independent Contract Work (myself)</fullName>
            </value>
            <value>
                <fullName>Other/I am not applying to be an advisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>