force-app/main/default/objects/CredentialForm__c/fields/Position_Applying_For__c.field-meta.xml
<CustomField>
    <fullName>Position_Applying_For__c</fullName>
    <description>Position Applying For:</description>
    <label>Position Applying For:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC Advisor</fullName>
            </value>
            <value>
                <fullName>SAC Endorser</fullName>
            </value>
            <value>
                <fullName>SAC Instructor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>