force-app/main/default/objects/CredentialForm__c/fields/Primary_Language_spoken_by_candidate__c.field-meta.xml
<CustomField>
    <fullName>Primary_Language_spoken_by_candidate__c</fullName>
    <description>Primary Language spoken by candidate</description>
    <label>Primary Language spoken by candidate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>