force-app/main/default/objects/CredentialForm__c/fields/Program_Address__c.field-meta.xml
<CustomField>
    <fullName>Program_Address__c</fullName>
    <description>Program Address</description>
    <label>Program Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>