force-app/main/default/objects/CredentialForm__c/fields/Resubmitted_Documents__c.field-meta.xml
<CustomField>
    <fullName>Resubmitted_Documents__c</fullName>
    <label>Resubmitted Documents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current First Aid and Adult-Child CPR Certification</fullName>
            </value>
            <value>
                <fullName>Child Abuse and Maltreatment Training</fullName>
            </value>
            <value>
                <fullName>Proof of Work in Afterschool</fullName>
            </value>
            <value>
                <fullName>Proof of Registration in the Aspire Registry</fullName>
            </value>
            <value>
                <fullName>Letter of Recommendation</fullName>
            </value>
            <value>
                <fullName>updated Resume</fullName>
            </value>
            <value>
                <fullName>OCFS Training Cover Page</fullName>
            </value>
            <value>
                <fullName>Training Certificates (you have attended)</fullName>
            </value>
            <value>
                <fullName>Three year Professional Development Plan (update of old goals)</fullName>
            </value>
            <value>
                <fullName>Commitment of Professionalism (new goals)</fullName>
            </value>
            <value>
                <fullName>Contributions to the Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>