force-app/main/default/objects/CredentialForm__c/fields/SAC_Advisor_Training__c.field-meta.xml
<CustomField>
    <fullName>SAC_Advisor_Training__c</fullName>
    <label>SAC Advisor Training</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>