force-app/main/default/objects/CredentialForm__c/fields/SAC_Credential_Manual_Year__c.field-meta.xml
<CustomField>
    <fullName>SAC_Credential_Manual_Year__c</fullName>
    <description>SAC Credential Manual Year</description>
    <label>SAC Credential Manual Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>