force-app/main/default/objects/CredentialForm__c/fields/SAC_Distance_Learning_Balance__c.field-meta.xml
<CustomField>
    <fullName>SAC_Distance_Learning_Balance__c</fullName>
    <label>SAC Distance Learning Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>