force-app/main/default/objects/CredentialForm__c/fields/SAC_Duplicate_Certificate__c.field-meta.xml
<CustomField>
    <fullName>SAC_Duplicate_Certificate__c</fullName>
    <label>SAC Duplicate Certificate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>