force-app/main/default/objects/CredentialForm__c/fields/SAC_Endorsement_Request__c.field-meta.xml
<CustomField>
    <fullName>SAC_Endorsement_Request__c</fullName>
    <label>SAC Endorsement Request</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>