force-app/main/default/objects/CredentialForm__c/fields/SAC_Renewal__c.field-meta.xml
<CustomField>
    <fullName>SAC_Renewal__c</fullName>
    <label>SAC Renewal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>