force-app/main/default/objects/CredentialForm__c/fields/SAC_Virtual_Full_Payment__c.field-meta.xml
<CustomField>
    <fullName>SAC_Virtual_Full_Payment__c</fullName>
    <label>SAC Virtual Full Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>