force-app/main/default/objects/CredentialForm__c/fields/Statement_of_Professionalism__c.field-meta.xml
<CustomField>
    <fullName>Statement_of_Professionalism__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Statement of Professionalism</description>
    <label>Statement of Professionalism</label>
    <type>Checkbox</type>
</CustomField>