force-app/main/default/objects/CredentialForm__c/fields/Supervisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Email__c</fullName>
    <description>Supervisor Email</description>
    <label>Supervisor Email</label>
    <type>Email</type>
</CustomField>