force-app/main/default/objects/CredentialForm__c/fields/Supervisor_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Phone_Number__c</fullName>
    <description>Supervisor Phone Number</description>
    <label>Supervisor Phone Number</label>
    <type>Phone</type>
</CustomField>