force-app/main/default/objects/CredentialForm__c/fields/Visit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Visit_Comments__c</fullName>
    <description>Please leave your comments here about your visit (was scheduling easy? how was your experience with the Network? Recommendations on the process? etc.)</description>
    <label>Visit Comments:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>