force-app/main/default/objects/CredentialForm__c/fields/Why_do_you_want_to_become_an_advisor__c.field-meta.xml
<CustomField>
    <fullName>Why_do_you_want_to_become_an_advisor__c</fullName>
    <description>If you are applying to be an advisor, why do you want to become an advisor? (if applying for another position, just list N/A)</description>
    <label>Why do you want to become an advisor?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>