force-app/main/default/objects/CredentialForm__c/fields/Why_enrolling_in_the_mentee_process__c.field-meta.xml
<CustomField>
    <fullName>Why_enrolling_in_the_mentee_process__c</fullName>
    <description>Why am I enrolling in the mentee process?</description>
    <label>Why enrolling in the mentee process?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>