force-app/main/default/objects/CredentialForm__c/fields/Work_History__c.field-meta.xml
<CustomField>
    <fullName>Work_History__c</fullName>
    <description>Work History</description>
    <label>Work History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>