force-app/main/default/objects/CredentialForm__c/fields/Working_in_a_licensedregistered_program__c.field-meta.xml
<CustomField>
    <fullName>Working_in_a_licensedregistered_program__c</fullName>
    <description>If I am currently working in (or the administrator of) a licensed/registered program, I attest that</description>
    <label>Working in a licensed/registered program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>My program has been in compliance with all regulatory standards for the last two years (compliance history may be requested)</fullName>
            </value>
            <value>
                <fullName>My program has not been in compliance (compliance history may be requested) with OCFS regulations and I will explain below, N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>